--- a/Cureenncy converter.html
+++ b/Cureenncy converter.html
@@ -17,13 +17,18 @@
             font-family: Arial, sans-serif;
         }
 
+        .container {
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.7); /* Transparent background for better visibility */
+            border-radius: 8px;
+            padding: 20px;
+        }
+
         #result {
             font-weight: bold;
         }
 
-        /* Additional style to improve visibility of elements on the image */
         label, input, select, button {
-            background-color: rgba(255, 255, 255, 0.7); /* Transparent background for better visibility */
             margin: 5px;
             padding: 5px;
             border: none;
@@ -33,6 +38,52 @@
     <title>Currency Converter</title>
 </head>
 <body>
+
+    <div class="container">
+        <h1>Currency Converter</h1>
+
+        <label for="amount">Amount:</label>
+        <input type="number" id="amount" placeholder="Enter amount" step="0.01" value="100">
+
+        <label for="fromCurrency">From:</label>
+        <select id="fromCurrency">
+            <!-- ... (unchanged options) ... -->
+        </select>
+
+        <label for="toCurrency">To:</label>
+        <select id="toCurrency">
+            <!-- ... (unchanged options) ... -->
+        </select>
+
+        <button onclick="convertCurrency()">Convert</button>
+        <button onclick="clearResult()">Clear Result</button>
+
+        <p id="result">Result:</p>
+    </div>
+
+    <script>
+        function convertCurrency() {
+            const amount = parseFloat(document.getElementById("amount").value);
+            const fromCurrency = document.getElementById("fromCurrency").value;
+            const toCurrency = document.getElementById("toCurrency").value;
+
+            const exchangeRates = {
+                // ... (unchanged exchange rates) ...
+            };
+
+            const convertedAmount = amount * (exchangeRates[toCurrency] / exchangeRates[fromCurrency]);
+
+            document.getElementById("result").innerText = `Result: ${convertedAmount.toFixed(2)} ${toCurrency}`;
+        }
+
+        function clearResult() {
+            document.getElementById("result").innerText = "Result:";
+        }
+    </script>
+
+</body>
+</html>
+
 
     <h1>Currency Converter</h1>
 
